apps/car-rental/base/web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  selector:
    app: web-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
