apps/car-rental/base/web-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  to:
    kind: Service
    name: web-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
